--- a/micro-chasis/pom.xml
+++ b/micro-chasis/pom.xml
@@ -8,6 +8,17 @@
   	<groupId>org.springframework.boot</groupId>
   	<version>1.3.5.RELEASE</version>
   </parent>
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>Brixton.SR1</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+  </dependencyManagement>
   <properties>
   	<java.version>1.8</java.version>
   </properties>
@@ -32,5 +43,9 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-jersey</artifactId>
   	</dependency>
+  	<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
   </dependencies>
 </project>
