--- a/micro-chasis/pom.xml
+++ b/micro-chasis/pom.xml
@@ -40,12 +40,16 @@
   		<artifactId>spring-boot-starter-jetty</artifactId>
   	</dependency>
   	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-jersey</artifactId>
-  	</dependency>
-  	<dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-actuator</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.hazelcast</groupId>
+  		<artifactId>hazelcast</artifactId>
+  	</dependency>
   </dependencies>
 </project>
