Consul Discovery set up

--- a/micro-chasis/src/main/resources/bootstrap.properties
+++ b/micro-chasis/src/main/resources/bootstrap.properties
@@ -2,5 +2,5 @@ spring.cloud.consul.host=${HOST:${CONSUL_HOST:localhost}}
 spring.cloud.consul.port=${CONSUL_PORT:8500}
 spring.cloud.consul.discovery.ipAddress=${HOST:${ADVERTISED_HOST:localhost}}
 spring.cloud.consul.discovery.preferIpAddress=true
-#spring.cloud.consul.discovery.healthCheckPath=/health
+spring.cloud.consul.discovery.healthCheckPath=/check/health
 spring.cloud.consul.discovery.healthCheckInterval=10s
