--- a/micro-chasis/pom.xml
+++ b/micro-chasis/pom.xml
@@ -19,6 +19,17 @@
             </plugin>
         </plugins>
     </build>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.springframework.cloud</groupId>
+  			<artifactId>spring-cloud-dependencies</artifactId>
+  			<version>Brixton.SR1</version>
+  			<type>pom</type>
+  			<scope>import</scope>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>    
   <dependencies>
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
@@ -28,5 +39,14 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-jetty</artifactId>
   	</dependency>
+  	<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-eureka</artifactId>
+    </dependency>
   </dependencies>
+
 </project>
